Remove fixed z-index positioning

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -14,7 +14,6 @@
 }
 .current-time {
     position: absolute;
-    z-index: 1000;
 
     display: flex;
     flex-direction: row;
